--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,12 @@
+@font-face {
+  font-family: 'Nevis';
+  src: url('../assets/nevis.ttf');
+}
 /* CSS declarations go here */
 body {
-  font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  font-family: 'Nevis';
+  background-color: #FFE88D;
+  background-image: linear-gradient(to bottom, #FFE88D, white 100%);
   background-attachment: fixed;
 
   position: absolute;
@@ -17,11 +21,30 @@ body {
   font-size: 14px;
 }
 
+.headings {
+  font-size: 1.5em;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-right: 1em;
+  width: 100%;
+  text-align: center;
+  border-top: 1px solid #FD6F20;
+  border-bottom: 1px solid #FD6F20;
+  background-color: #FD6F20;
+  color: #FFE88D;
+  padding: 7px 0 7px 0;
+}
+
 .container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 20px auto;
   min-height: 100%;
-  background: white;
+  background: #FFE88D;
+  font-family: nevis;
+}
+
+.intro, form {
+  padding: 0 20px 10px 30px;
 }
 
 header {
@@ -33,6 +56,7 @@ header {
 
 #login-buttons {
   display: block;
+  text-align: right;
 }
 
 h1 {
@@ -49,14 +73,24 @@ form {
   position: relative;
 }
 
+textarea {
+  width: 99%;
+  background-color: #FFE88D;
+  border: 1px solid #A53038;
+  padding-left: 10px;
+  font-size: 1em;
+  padding: 7px 0;
+}
+
 .new-task input {
   box-sizing: border-box;
-  padding: 10px 0;
+  padding: 7px 0;
   background: transparent;
-  border: none;
   width: 100%;
-  padding-right: 80px;
   font-size: 1em;
+  border: 1px solid #A53038;
+  margin: 5px 0;
+  padding-left: 10px;
 }
 
 .new-task input:focus{
@@ -123,4 +157,25 @@ header .hide-completed {
   .new-task input {
     padding-bottom: 5px;
   }
+}
+
+button {
+  color: #FFE88D;
+  background-color: #A53038;
+  padding: 10px 14px;
+  border: none;
+  font-size: 16px;
+}
+
+select {
+  margin-left: 30px;
+    width: 30%;
+    font-size: 17px;
+    background-color: #A53038;
+    color: #FFE88D;
+}
+
+.login-link-and-dropdown-list {
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
